--- a/style.css
+++ b/style.css
@@ -5,3 +5,13 @@
 body {
     background-color: purple;
 }
+
+.background_img {
+    width: 200px;
+    display: block;
+    margin: 0 auto;
+}
+
+.navigation {
+    display: flex;
+}
