--- a/style.css
+++ b/style.css
@@ -1,17 +1,109 @@
+a {
+    text-decoration: none;
+}
+
+ul,
+ol,
+li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+body {
+    height: 100%;
+    line-height: 1;
+    font-size: 16px;
+    color: black;
+    font-family: 'Rampart One';
+}
+
+.h1 {
+    text-align: center;
+}
+
 .title {
     background-color: aqua;
 }
 
-body {
-    background-color: purple;
+.wrapper {
+min-height: 100%;
+margin: 0 auto;
+font-family: 'Rampart One';
+overflow: hidden;
+background-color: purple;
+text-align: center;
 }
 
-.background_img {
-    width: 200px;
-    display: block;
+
+/* -------------------------НАВИГАЦИЯ-----------------------*/
+
+._container {
+margin: 0 auto;
+font-size: 4px;
+background-color: purple;
+color: aliceblue;
+list-style: none;
+padding: 5px;
+font-family: 'Rampart One';
+}
+
+.header_menu {
+    margin: 0 auto;
+    max-width: 400px;
+}
+
+.menu_list {
+    display: flex;
+    flex-wrap: wrap;
     margin: 0 auto;
 }
 
-.navigation {
+.menu_link {
+    color: white;
+    margin: 0 21px 0 0;
+    font-size: 10px;
+}
+
+
+.menu_item:hover {
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+.uno {
+    font-size: 40px;
+    position: relative;
+    color: purple;
+}
+
+
+
+.div_h1 {
     display: flex;
+    position: absolute;
+    color: purple;
+    font-size: 20px;
+    margin: 0 auto;
+}
+
+.div_img {
+    position: relative;
+}
+
+
+.background_img {
+    max-width: 250px;
+    margin: 0 auto;
+    margin-top: -80px;
+
 }
